--- a/apps/examiner.yaml
+++ b/apps/examiner.yaml
@@ -18,13 +18,11 @@ spec:
     image:
       repository: quay.io/heubeck/examiner
       tag: latest
-    linkerd:
-      enabled: true
     monitoring:
-      serviceMonitor: true
+      serviceMonitor: false
     configuration:
       ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘
       SERVER_ERROR_RATE: 0
       REQUEST_DELAY: 100..250
     canary:
-      enabled: true
+      enabled: false
