--- a/local-cluster/flagger.yaml
+++ b/local-cluster/flagger.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ingress
+  name: flagger
   namespace: flux-system
 spec:
   interval: 15m
@@ -10,12 +10,12 @@ spec:
     kind: GitRepository
     name: flux-system
   dependsOn:
-    - name: linkerd
-  path: "./ingress"
+    - name: infrastructure
+  path: "./flagger"
   prune: false
   timeout: 5m
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta2
       kind: HelmRelease
-      name: ingress-nginx
-      namespace: ingress
+      name: flagger
+      namespace: flagger
