--- a/local-cluster/kustomization.yaml
+++ b/local-cluster/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#- infrastructure.yaml
-#- linkerd.yaml
-#- ingress.yaml
+- infrastructure.yaml
+- monitoring-config.yaml
+- flagger.yaml
 - apps.yaml
