--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -3,6 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - namespaces.yaml
+- gateways.yaml
 - dashboard.yaml
 - wego.yaml
 - prometheus.yaml
+- route.yaml
