--- a/infrastructure/prometheus.yaml
+++ b/infrastructure/prometheus.yaml
@@ -73,30 +73,28 @@ spec:
           cookie_samesite: none
       serviceMonitor:
         path: "/grafana/metrics"
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: monitoring-ingress
-#   namespace: monitoring
-# spec:
-#   rules:
-#     - http:
-#         paths:
-#           - backend:
-#               service:
-#                 name: prometheus-operator-grafana
-#                 port:
-#                   number: 80
-#             path: /grafana
-#             pathType: Prefix
-#     - http:
-#         paths:
-#           - backend:
-#               service:
-#                 name: prometheus-operated
-#                 port:
-#                   number: 9090
-#             path: /prometheus
-#             pathType: Prefix
-#
+---
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
+metadata:
+  name: route
+  namespace: monitoring
+spec:
+  parentRefs:
+    - name: http-gateway
+      namespace: default
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /grafana
+    backendRefs:
+    - name: prometheus-operator-grafana
+      port: 80
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /prometheus
+    backendRefs:
+    - name: prometheus-operator-kube-p-prometheus
+      port: 9090
