--- a/.kind/metallb/kustomization.yaml
+++ b/.kind/metallb/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: metallb-system
 resources:
-  - github.com/metallb/metallb/config/native?ref=v0.13.12
+  # see https://github.com/metallb/metallb/releases
+  - github.com/metallb/metallb/config/native?ref=v0.14.3
