--- a/infrastructure/prometheus.yaml
+++ b/infrastructure/prometheus.yaml
@@ -74,7 +74,7 @@ spec:
       serviceMonitor:
         path: "/grafana/metrics"
 ---
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: route
