Fix flux monitoring

--- a/infrastructure/prometheus.yaml
+++ b/infrastructure/prometheus.yaml
@@ -73,6 +73,11 @@ spec:
           cookie_samesite: none
       serviceMonitor:
         path: "/grafana/metrics"
+      additionalDataSources:
+        - inputName: "DS_PROMETHEUS"
+          datasourceName: "Prometheus"
+        - inputName: "prometheus_datasource"
+          datasourceName: "Prometheus"
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
