--- a/apps/examiner.yaml
+++ b/apps/examiner.yaml
@@ -21,7 +21,7 @@ spec:
     monitoring:
       serviceMonitor: true
     configuration:
-      ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘
+      ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘 Feel it!
       SERVER_ERROR_RATE: 7
       REQUEST_DELAY: 100..250
     canary:
