Add metric templates

--- a/apps/examiner.yaml
+++ b/apps/examiner.yaml
@@ -21,14 +21,35 @@ spec:
     monitoring:
       serviceMonitor: true
     configuration:
-      ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘 Feel it!
-      SERVER_ERROR_RATE: 7
+      ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘
+      SERVER_ERROR_RATE: 15
       REQUEST_DELAY: 100..250
-    canary:
-      enabled: true
     gatewayApi:
       enabled: true
       pathPrefix: /examine
       gatewayRef:
         name: http-gateway
         namespace: default
+    canary:
+      enabled: true
+      analysis:
+        interval: 60s
+        threshold: 2
+        maxWeight: 100
+        stepWeight: 20
+        stepWeightPromotion: 35
+        metrics:
+          - name: server-success-rate
+            templateRef:
+              name: server-success-rate
+              namespace: flux-system
+            thresholdRange:
+              min: 90
+            interval: 1m
+          - name: request-latency-p99
+            templateRef:
+              name: request-latency-p99
+              namespace: flux-system
+            thresholdRange:
+              max: 500
+            interval: 1m
