--- a/monitoring-config/kustomization.yaml
+++ b/monitoring-config/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - flux-pod-monitor.yaml
 - flux-service-monitor.yaml
 - cilium-service-monitors.yaml
+- flagger-metric-templates.yaml
 configMapGenerator:
   - name: flux-grafana-dashboards
     namespace: monitoring
