Adjust for flux 2.3 and podman only

--- a/flagger/flagger.yaml
+++ b/flagger/flagger.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 120m
   url: https://flagger.app
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: flagger
