--- a/infrastructure/prometheus.yaml
+++ b/infrastructure/prometheus.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 15m
   url: https://prometheus-community.github.io/helm-charts
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: prometheus-operator
