Disable additional grafana datasources

--- a/infrastructure/prometheus.yaml
+++ b/infrastructure/prometheus.yaml
@@ -73,11 +73,15 @@ spec:
           cookie_samesite: none
       serviceMonitor:
         path: "/grafana/metrics"
-      additionalDataSources:
-        - inputName: "DS_PROMETHEUS"
-          datasourceName: "Prometheus"
-        - inputName: "prometheus_datasource"
-          datasourceName: "Prometheus"
+#      additionalDataSources:
+#        - inputName: "DS_PROMETHEUS"
+#          datasourceName: "Prometheus"
+#          orgId: 1
+#          uid: ds_prom
+#        - inputName: "prometheus_datasource"
+#          datasourceName: "Prometheus"
+#          orgId: 1
+#          uid: prom_ds
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
