Fix k8s dashboad version 6, trigger canary

--- a/infrastructure/dashboard.yaml
+++ b/infrastructure/dashboard.yaml
@@ -18,7 +18,7 @@ spec:
   chart:
     spec:
       chart: kubernetes-dashboard
-      version: "*"
+      version: "~6"
       sourceRef:
         kind: HelmRepository
         name: kubernetes-dashboard
