--- a/apps/helm/examiner.yaml
+++ b/apps/helm/examiner.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: examiner
-  namespace: apps
+  namespace: helm
 spec:
   chart:
     spec:
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: chart-repo
-        namespace: apps
+        namespace: helm
       interval: 60m
   interval: 1m
   values:
@@ -21,12 +21,12 @@ spec:
     monitoring:
       serviceMonitor: true
     configuration:
-      ECHO_VALUE: ⛈ Canaries r0ck, hell yeah! 🤘
+      ECHO_VALUE: ⛈ Helm Canaries r0ck, hell yeah! 🤘
       SERVER_ERROR_RATE: 3
       REQUEST_DELAY: 50..250
     gatewayApi:
       enabled: true
-      pathPrefix: /examine
+      pathPrefix: /examine-helm
       gatewayRef:
         name: http-gateway
         namespace: default
