--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -3,6 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - namespace.yaml
-- helm-charts.yaml
-- examiner.yaml
-# - route.yaml
+- plain
+- helm
