--- a/apps/plain/route.yaml
+++ b/apps/plain/route.yaml
@@ -1,9 +1,10 @@
+# Only needed if there's no Canary
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: route
-  namespace: apps
+  name: routes
+  namespace: plain
 spec:
   parentRefs:
     - name: http-gateway
@@ -12,7 +13,7 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /examine
+        value: /examine-plain
     backendRefs:
     - name: examiner
       port: 80
