--- a/apps/plain/route.yaml
+++ b/apps/plain/route.yaml
@@ -17,3 +17,9 @@ spec:
     backendRefs:
     - name: examiner
       port: 80
+    filters:
+    - type: URLRewrite
+      urlRewrite:
+        path:
+          replacePrefixMatch: /examine
+          type: ReplacePrefixMatch
