--- a/apps/plain/kustomization.yaml
+++ b/apps/plain/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - serviceaccount.yaml
 - deployment.yaml
 - service.yaml
+- hpa.yaml
 - canary.yaml
 # HttpRoute is created by Flagger if Canary is configured
 #- route.yaml
