--- a/apps/helm/examiner.yaml
+++ b/apps/helm/examiner.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -11,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: chart-repo
-        namespace: helm
+        namespace: default
       interval: 60m
   interval: 1m
   values:
