--- a/apps/plain/kustomization.yaml
+++ b/apps/plain/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
 - deployment.yaml
 - service.yaml
 - hpa.yaml
-#- canary.yaml
+- canary.yaml
 # HttpRoute is created by Flagger if Canary is configured
-- route.yaml
+#- route.yaml
