--- a/apps/plain/kustomization.yaml
+++ b/apps/plain/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
 - hpa.yaml
 - servicemonitor.yaml
 
-- canary.yaml
+#- canary.yaml
 # HttpRoute is created by Flagger if Canary is configured
-#- route.yaml
+- route.yaml
