--- a/apps/helm/examiner.yaml
+++ b/apps/helm/examiner.yaml
@@ -22,7 +22,7 @@ spec:
     monitoring:
       serviceMonitor: true
     configuration:
-      ECHO_VALUE: ⛈ Helm Canaries r0ck, hell yeah! 🤘
+      ECHO_VALUE: ⛈ Helm Canary r0ckx, hell yeah! 🤘
       SERVER_ERROR_RATE: 3
       REQUEST_DELAY: 50..250
     gatewayApi:
